# api/endpoints.go
@@ -168,3 +168,16 @@ func ReadNumMean(g *gin.Context) {
 func GetMetrics(g *gin.Context) {
 	g.String(http.StatusOK, internal.GetMetrics())
 }
+
+// Serialize godoc
+// @Summary Read all stat names
+// @Schemes
+// @Description Read list of numeric stat names
+// @Accept json
+// @Produce json
+// @Success 200 {object} JSONNumReadResult
+// @Router /serialize [get]
+func Serialize(g *gin.Context) {
+	internal.Serialize()
+	g.JSON(http.StatusOK, gin.H{"value": "asdf"})
+}
